ourapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ourapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: ourapp
          image: covenant/dockerize-nodejs-image
          ports:
            - containerPort: 3000
