ourapp-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ourapp-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    component: web
