ourapp-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: ourapp-node
spec:
  type: NodePort
  ports:
    - port: 5050
      targetPort: 5000
      nodePort: 30001
  selector:
    component: web
