ourapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ourapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: ourapp-clusterip
              servicePort: 5000
